--- a/css/app.css
+++ b/css/app.css
@@ -158,7 +158,7 @@ section {
   cursor: pointer;
   display: block;
   border: 1px solid #bebece;
-  width: 18rem;
+  width: 100%;
 }
 
 .borda-arredodanda:focus {
@@ -168,7 +168,8 @@ section {
 
 .input {
   display: flex;
-  gap: 2rem;
+  /* gap: 2rem; */
+  justify-content: space-between;
 }
 
 .input-restante {
@@ -179,20 +180,43 @@ textarea {
   resize: none;
 }
 
-@media only screen and (max-width: 600px) {
-  .container {
-    flex-direction: column;
+@media only screen and (max-width: 480px) {
+    .container {
+        flex-direction: column;
+    }
+
+    h2 {
+        margin: 2px;
+    }
+
+    h3 {
+        margin-left: 0px;
+    }
+
+    p {
+        margin-left: 0px;
+    }
+
+    .grupos {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    li {
+        flex-direction: column;
+        width: 100%;
+        display: flex; 
+    }
+
+    .input {
+        flex-direction: column;
+        display: flex;
+        width: 100%;
+        gap: 1rem;
+    }
+
+    .grupos-competencias {
+        gap: 3rem;
+        margin-left: 0rem;
+    }
   }
-}
-
-@media only screen and (min-width: 600px) {
-}
-
-@media only screen and (min-width: 768px) {
-}
-
-@media only screen and (min-width: 992px) {
-}
-
-@media only screen and (min-width: 1200px) {
-}
